2012-09-01  Murray Cumming  <murrayc@murrayc.com>

        Added LevelBar .defs.

        * tools/extra_defs_gen/generate_defs_gtk.cc:
	Mention GTK_TYPE_LEVEL_BAR.
        * gtk/src/gtk_signals.defs: Regenerated.

3.5.12:

2012-08-30  Murray Cumming  <murrayc@murrayc.com>

        Add LevelBar.

	* gtk/src/levelbar.[hg|ccg]: New files to wrap GtkLevelBar.
        * tools/m4/convert_gtk.m4: Add a necessary conversion.
        * gtk/gtkmm.h:
        * gtk/src/filelist.am: Mention it in these files.

2012-08-30  Murray Cumming  <murrayc@murrayc.com>

        CellRendererText: Add the placeholder_text property.

        * gtk/src/cellrenderertext.hg: Wrap the new placeholder-text
	property.

2012-08-29  Murray Cumming  <murrayc@murrayc.com>

	Widget: Add insert_action_group().

        * gtk/src/widget.hg: Wrap gtk_widget_insert_action_group().
        * tools/m4/convert_gtk.m4: Add a necessary conversion.

2012-08-29  Murray Cumming  <murrayc@murrayc.com>

        TextView: Add input purpose and input hints methods.

        * gtk/src/textview.hg: Added get/set_input_purpose() and 
	get/set_input_hints() and properties.
	* gtk/src/entry.hg:
        * gtk/src/enums.hg: Moved the enums from entry.hg to here.

2012-08-29  Murray Cumming  <murrayc@murrayc.com>

        Regenerate properties and signals defs for GTK+.

        * gtk/src/gtk_signals.defs: Regenerate.

2012-08-29  Murray Cumming  <murrayc@murrayc.com>

        MenuButton: Added get/set_popup(), deprecated get/set_menu().

        * gtk/src/menubutton.[hg|ccg]: Added get/set/unset_popup().
	Deprecated get/set/unset_menu() and changed their implementations
	to use the gtk_menu_button_set/get_menu() functions. This
	change in GTK+ was cosmetic and we already used the correct type.

2012-08-29  Murray Cumming  <murrayc@murrayc.com>

        Application: Add get_active_window().

        * gtk/src/application.hg: Added get_active_window() and 
	the property. Also used refreturn on get_window_by_id().
