@@ -21,6 +21,9 @@ _DEFS(gtkmm,gtk)
 #include <gtkmm/treemodelcolumn.h>
 #include <iterator>
 #include <gtk/gtk.h> /* for GtkTreeIter */
+#ifdef GLIBMM_HAVE_SUN_REVERSE_ITERATOR
+#include <cstddef> /* for std::ptrdiff_t */
+#endif
 
 namespace Gtk
 {
@@ -339,7 +342,7 @@ public:
     typedef std::reverse_iterator<iterator> reverse_iterator;
   #else
     typedef std::reverse_iterator<iterator, std::random_access_iterator_tag,
-                                  int, int&, int*, ptrdiff_t> reverse_iterator;
+                                  int, int&, int*, std::ptrdiff_t> reverse_iterator;
   #endif
 
     typedef Gtk::TreeIter const_iterator; //TODO: Make it a real const_iterator.
@@ -348,7 +351,7 @@ public:
     typedef std::reverse_iterator<const_iterator> const_reverse_iterator;
   #else
     typedef std::reverse_iterator<const_iterator, std::random_access_iterator_tag,
-                                  int, const int&, const int*, ptrdiff_t> const_reverse_iterator;
+                                  int, const int&, const int*, std::ptrdiff_t> const_reverse_iterator;
   #endif
 
   iterator begin();
