@@ -24,6 +24,9 @@ _DEFS(gtkmm,gtk)
 
 #include <gtkmm/treemodel.h>
 #include <gtkmm/selectiondata.h>
+#ifdef GLIBMM_HAVE_SUN_REVERSE_ITERATOR
+#include <cstddef> /* for std::ptrdiff_t */
+#endif
 
 namespace Gtk
 {
@@ -64,10 +67,10 @@ public:
 #else
 
   typedef std::reverse_iterator<iterator, std::random_access_iterator_tag,
-                                int, int&, int*, ptrdiff_t> reverse_iterator;
+                                int, int&, int*, std::ptrdiff_t> reverse_iterator;
 
   typedef std::reverse_iterator<const_iterator, std::random_access_iterator_tag,
-                                int, const int&, const int*, ptrdiff_t> const_reverse_iterator;
+                                int, const int&, const int*, std::ptrdiff_t> const_reverse_iterator;
 
 #endif /* GLIBMM_HAVE_SUN_REVERSE_ITERATOR */
 
