@@ -1,3 +1,13 @@
+2012-09-13  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
+
+	Use std::size_t and std::ptrdiff_t.
+
+	* demos/gtk-demo/example_stockbrowser.cc:
+	* gtk/gtkmm/radiobuttongroup.h: Use std::size_t instead of ::size_t.
+	* gtk/src/treeiter.hg:
+	* gtk/src/treepath.hg: Use std::ptrdiff_t instead of ::ptrdiff_t.
+	Only the std versions are required to be declared in <cstddef>.
+
 2012-09-01  Murray Cumming  <murrayc@murrayc.com>
 
         Added LevelBar .defs.
